# cortex-m-quickstart

./: .gitignore  Cargo.toml  README.md  search-index.js
.cargo/: config
aligned/: all.html  fn.Aligned.html  index.html  struct.Aligned.html  trait.Alignment.html
alloc_cortex_m/: CortexMHeap.t.html  all.html  index.html  sidebar-items.js  struct.CortexMHeap.html
bare_metal/: all.html  index.html  struct.CriticalSection.html  struct.Mutex.html  struct.Peripheral.html  trait.Nr.html
cortex_m/: VectorTable.t.html  all.html  enum.Exception.html  fn.vector_table.html  index.html  macro.bkpt!.html  macro.bkpt.html  macro.iprint.html  macro.iprintln.html  struct.StackFrame.html  struct.VectorTable.html  type.Handler.html  vector_table.v.html
cortex_m/asm/: fn.bkpt.html  fn.dmb.html  fn.dsb.html  fn.isb.html  fn.nop.html  fn.sev.html  fn.wfe.html  fn.wfi.html  index.html  sidebar-items.js
cortex_m/exception/: enum.Exception.html  index.html  struct.ExceptionFrame.html
cortex_m/interrupt/: fn.disable.html  fn.enable.html  fn.free.html  index.html  struct.CriticalSection.html  struct.Mutex.html  trait.Nr.html
cortex_m/itm/: fn.write_aligned.html  fn.write_all.html  fn.write_fmt.html  fn.write_str.html  index.html
cortex_m/peripheral/: cpuid.v.html  dcb.v.html  dcb_mut.v.html  dwt.v.html  dwt_mut.v.html  fn.cpuid.html  fn.dcb.html  fn.dcb_mut.html  fn.dwt.html  fn.dwt_mut.html  fn.fpb.html  fn.fpb_mut.html  fn.fpu.html  fn.fpu_mut.html  fn.itm.html  fn.itm_mut.html  fn.mpu.html  fn.mpu_mut.html  fn.nvic.html  fn.nvic_mut.html  fn.scb.html  fn.scb_mut.html  fn.syst.html  fn.syst_mut.html  fn.tpiu.html  fn.tpiu_mut.html  fpb.v.html  fpb_mut.v.html  fpu.v.html  fpu_mut.v.html  index.html  itm.v.html  itm_mut.v.html  mpu.v.html  mpu_mut.v.html  nvic_mut.v.html  scb.v.html  scb_mut.v.html  struct.CBP.html  struct.CPUID.html  (+15 more)
cortex_m/register/: index.html
cortex_m_quickstart/: all.html  index.html  sidebar-items.js
cortex_m_quickstart/examples/: index.html  sidebar-items.js
cortex_m_rt/: all.html  fn.heap_start.html  index.html  macro.exception.html  macro.interrupts!.html  macro.interrupts.html  macro.main.html  sidebar-items.js  struct.ExceptionFrame.html
cortex_m_semihosting/: all.html  fn.syscall.html  fn.syscall1.html  index.html  macro.syscall.html  macro.syscall1.html
cortex_m_semihosting/debug/: constant.EXIT_FAILURE.html  constant.EXIT_SUCCESS.html  enum.Exception.html  fn.exit.html  fn.report_exception.html  index.html  type.ExitStatus.html
cortex_m_semihosting/hio/: fn.hstderr.html  fn.hstdout.html  index.html  struct.HStderr.html  struct.HStdout.html
cortex_m_semihosting/nr/: constant.CLOCK.html  constant.CLOSE.html  constant.ELAPSED.html  constant.ENTER_SVC.html  constant.ERRNO.html  constant.FLEN.html  constant.GET_CMDLINE.html  constant.HEAPINFO.html  constant.ISERROR.html  constant.ISTTY.html  constant.OPEN.html  constant.READ.html  constant.READC.html  constant.REMOVE.html  constant.RENAME.html  constant.REPORT_EXCEPTION.html  constant.SEEK.html  constant.SYSTEM.html  constant.TICKFREQ.html  constant.TIME.html  constant.TMPNAM.html  constant.WRITE.html  constant.WRITE0.html  constant.WRITEC.html  index.html
examples/: door_unit.rs  ds18x20.rs  floor_heating_controller.rs  floor_unit.rs  floor_unit2.rs  floor_unit3.rs  ir_receiver.rs  rgb_by_remote.rs  suvid.rs  window_unit.rs
linked_list_allocator/: all.html  fn.align_down.html  fn.align_up.html  index.html  sidebar-items.js  struct.Heap.html
panic_abort/: all.html  index.html
panic_semihosting/: all.html  index.html
r0/: all.html  fn.init_data.html  fn.run_init_array.html  fn.zero_bss.html  index.html  macro.init_array.html  macro.pre_init_array.html
src/: ac_sense.rs  ac_switch.rs  dac.rs  display.rs  floor_heating.rs  floor_unit.rs  ir.rs  ir_remote.rs  lib.rs  light_control.rs  main.rs  menu.rs  messenger.rs  pump.rs  rgb.rs  roll.rs  ticker.rs  time.rs  timing.rs  valve.rs  week_time.rs  window_unit.rs
src/aligned/: lib.rs.html
src/bare_metal/: lib.rs.html
tools/: run.bat
vcell/: all.html  index.html  struct.VolatileCell.html
volatile_register/: all.html  index.html  struct.RO.html  struct.RW.html  struct.WO.html
(+163 files in other folders)
