[package]
authors = ["Tibor Prokai <pro@sch.bme.hu>"]
categories = ["embedded", "no-std"]
description = "A blue pill based board"
keywords = ["arm", "cortex-m", "template"]
license = "MIT OR Apache-2.0"
name = "room-pill"
repository = "https://github.com/tib888/room-pill"
version = "0.3.1"
edition = "2018"

[dependencies]
cortex-m = "0.6.1"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.5"
panic-halt = "0.2.0"
typenum = "1.11.2"
embedded-hal = "0.2.3"
nb = "0.1.2"

[dependencies.num-traits]
version = "0.2.8"
default-features = false

# [dependencies.stm32f103xx-rtc]
# git = "https://github.com/tib888/stm32f103xx-rtc"

[dependencies.stm32f103xx-hal]
git = "https://github.com/tib888/stm32f103xx-hal"
# path = "../stm32f103xx-hal"
version = "0.1.0"

[dependencies.cortex-m-rtfm]
features = ["timer-queue"]
version="0.4.3"

[dependencies.onewire]
git = "https://github.com/tib888/onewire"
version = "0.4.1"

[dependencies.lcd-hal]
git = "https://github.com/tib888/lcd-hal"
version = "0.4.0"

# Uncomment for the device example.
# [dependencies.stm32f103xx]
# features = ["rt"]
# version = "0.10.0"

[profile.release]
codegen-units = 1 # better optimizations
debug = true
lto = true # better optimizations # turn this off to win flash space, but will break onewire timing, need readjust
#panic ='abort'
