[package]
authors = ["Tibor Prokai <pro@sch.bme.hu>"]
categories = ["embedded", "no-std"]
description = "A blue pill based board"
keywords = ["arm", "cortex-m", "template"]
license = "MIT OR Apache-2.0"
name = "room-pill"
repository = "https://github.com/tib888/room-pill"
version = "0.4.0"
edition = "2018"

[dependencies]
cortex-m = "0.6.1"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.5"
panic-halt = "0.2.0"
# panic-semihosting = "0.5.2"
# panic-itm = "0.4.1"
typenum = "1.11.2"
nb = "0.1.2"

[dependencies.void]
default-features = false
version = "1.0.2"

[dependencies.embedded-hal]
version = "0.2.3"
features = ["unproven"]

[dependencies.num-traits]
version = "0.2.8"
default-features = false

[dependencies.cortex-m-rtfm]
features = ["timer-queue"]
version="0.4.3"

[dependencies.stm32f1xx-hal]
# git = "https://github.com/tib888/stm32f1xx-hal"
path = "../stm32f1xx-hal"
version = "0.4.0"
features = ["stm32f103", "rt"]

[dependencies.onewire]
# git = "https://github.com/tib888/onewire"
path = "../onewire"
version = "0.5.0"

[dependencies.lcd-hal]
git = "https://github.com/tib888/lcd-hal"
version = "0.4.0"

[profile.dev]
incremental = false
codegen-units = 1

[profile.release]
codegen-units = 1 # better optimizations
debug = true
lto = true # better optimizations # turn this off to win flash space, but will break onewire timing, need readjust
# panic ='abort'
